--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.25.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
