refactor: update ESLint rules for React to disable prop-types and unused vars checks

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,10 @@
       }
     ],
     "react/react-in-jsx-scope": "off",
-    "react/jsx-uses-react": "off"
+    "react/jsx-uses-react": "off",
+    "react/prop-types": "off",
+    "react/no-unescaped-entities": "warn",
+    "no-unused-vars": "off"
   },
   "settings": {
     "react": {
